# flex

./: .gitignore  README.md  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: test.yaml
src/flex/: __init__.py  flexcython.py  flexnumba.py  laguerre_cython.pyx
tests/: test_flex.py
